assets/css/style.css
body {
  /* background-image: linear-gradient(to bottom right, #b3ddf2, white, #f7797d); */
  /* color: white; */
  /* Location of the image */
  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .1)), url("../images/wall-2093277_1920.jpg");
  /* Background image is centered vertically and horizontally at all times */
  background-position: center center;
  /* Background image doesn't tile */
  background-repeat: no-repeat;
  /* Background image is fixed in the viewport so that it doesn't move when 
           the content's height is greater than the image's height */
  background-attachment: fixed;
  /* This is what makes the background image rescale based
           on the container's size */
  background-size: cover;
  /* Set a background color that will be displayed
           while the background image is loading */
  background-color: #464646;
  transition: 1s opacity;
}

.full-width-div {
  position: absolute;
  width: 100%;
  left: 0;
}

img {
  width: 400px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.full-width-div {
  margin-top: -220px;
}

main {
  flex: 1 0 auto;
}

#calendar, #gps, #ball {
  width: 50px;
}

#whatsup-main {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

footer {
  text-align: center;
}

.linebreak {
  width: auto;
  border: 15px solid #264758;
}

.eventofweek {
  background: #ee6e73;
  color: whitesmoke;
  /* font-weight: bold; */
  font-size: 24px;
}

.dropdown-button {
  width: 50%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

ul {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.event-block {
  min-width: 180px;
  margin: 0, 3;
  position: relative;
  float: left;
}

.eventDiv {
  padding: 20px;
  position: relative;
  height: 300px;
  width: 230px;
  float: left;
  display: block;
  z-index: 999;
  text-align: center;
}

.event-btn {
  background-color: lightseagreen;
  border-radius: 4px;
  padding: 5px;
  color: whitesmoke;
  font-weight: bold;
}

.imageDiv img {
  height: 100px;
  width: 100px;
}

.eventDiv img {
  height: 100px;
  width: 100px;
}

@media screen and (max-width: 575px) {
  body {
    width: 100%;
  }
  .resBtn {
    width: 20%;
  }
  .GoogleCalendar {
    width: 50%;
  }
  .imageDiv img {
    height: 35px;
    width: 35px;
  }
  tbody, th, td {
    font-size: 7px;
    margin: 0px;
    padding: 0px;
  }
  #moreBtn {
    font-size: 5px;
    font-stretch: extra-expanded;
    display: inline-block;
  }
}

